Less nav padding on mobile; fixes hafniatimes/issues#17

--- a/static/css/_responsive.scss
+++ b/static/css/_responsive.scss
@@ -14,7 +14,7 @@
         font-weight: bold;
         background-color: #F8F8F8;
 
-        a { padding: 0 .75em; }
+        a { padding: 0 .65em; }
     }
 
     #name h1 { @include getVerticalRhythm($mobilenameH1Size); }
