--- a/static/css/style.css
+++ b/static/css/style.css
@@ -284,7 +284,7 @@ mark {
     padding: .5em 0; }
   #site-navigation a {
     display: inline-block;
-    padding: 0 .75em; }
+    padding: 0 1em; }
 
 #name h1 {
   font-size: 3em;
@@ -435,7 +435,7 @@ h2 {
     font-weight: bold;
     background-color: #F8F8F8; }
     #site-navigation.box a {
-      padding: 0 .75em; }
+      padding: 0 .65em; }
 
   #name h1 {
     font-size: 3em;
@@ -463,7 +463,7 @@ h2 {
     font-weight: bold;
     background-color: #F8F8F8; }
     #site-navigation.box a {
-      padding: 0 .75em; }
+      padding: 0 .65em; }
 
   #name h1 {
     font-size: 3em;
